Moved code around Separated some code into common JS and CSS files

--- a/index.html
+++ b/index.html
@@ -1,116 +1,41 @@
 <html>
-<head>
-<title>ADS-B Monitor</title>
-<link rel="stylesheet" href="adsb.css" />
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js" type="text/javascript"></script>
-<script src="jquery.metadata.js"></script>
-<script src="jquery.tablesorter.min.js"></script>
-<script>
-href = "data.php";
-intervalObj = null;
-existing = {};			// store known flights, key = ICAO, value = table row
+	<head>
+		<title>ADS-B Monitor</title>
+		<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
 
-function update() {
-	$.ajax({url: href, dataType: "json"}).done(function(result) {
-		//$("#" + id).children(".pingresult").text(result);
-		//$(".tablesorter").trigger("update");
-		var added = 0;
-		var updated = 0;
-		var removed = 0;
-		
-		var found = [];
-		for (var i = 0; i < result.length; i++) {
-			var row = result[i];
-			var tr;
-			if (row.hex in existing) {
-				tr = existing[row.hex];
-				updated++;
-			} else {
-				tr = addRow(row.hex);
-				added++;
-			}
-			
-			tr.children("td").each(function(j) {
-				if (j == 0) {
-					$(this).text(row.hex);
-				} else if (j == 1) {
-					$(this).text(row.flight);
-				} else if (j == 2) {
-					$(this).text(row.altitude);
-				} else if (j == 3) {
-					$(this).text(row.speed);
-				} else if (j == 4) {
-					$(this).text(row.lat);
-				} else if (j == 5) {
-					$(this).text(row.lon);
-				} else if (j == 6) {
-					$(this).text(row.track);
-				} else if (j == 7) {
-					$(this).text(row.messages);
-				} else if (j == 8) {
-					$(this).text(row.seen);
-				}
-			} );
-			
-			found.push(row.hex);
-		}
-		
-		// Remove the stuff that no longer exists in the json
-		for (var key in existing) {
-			if (existing.hasOwnProperty(key) && ($.inArray(key, found) == -1)) {
-				existing[key].remove();
-				delete existing[key];
-				removed++;
-			}
-		}
-		
-		$("#flightlist").trigger("update");
-		
-		//$("#status").text("Last result: success");		// <br/>Added: " + added + "<br/>Updated: " + updated + "<br/>Removed: " + removed
-	} ).fail(function() {
-		//$("#status").text("Last result: fail");
-	} );
-}
+		<link rel="stylesheet" href="css/common.css" type="text/css" />
+		<link rel="stylesheet" href="css/gmap.css" type="text/css" />
 
-function addRow(icao) {
-	var newHTML = "<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>";
-	var element = $(newHTML);
-	$("#flightlist > tbody").append(element);
-	existing[icao] = element;
-	return element;
-}
-
-$(document).ready(function() {
-	// Init tablesorter
-	$(".tablesorter").tablesorter();
-
-	update();
-	intervalObj = setInterval(update, 1000);
-} );
-</script>
-</head>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+		<script src="js/common.js"></script>
+		<script src="js/gmap.js"></script>
+	</head>
 <body>
-<h1>ADS-B Monitor</h1>
-<table id="flightlist" class="tablesorter {sortlist: [[0,0]]}">
-<thead>
-<tr>
-	<th>ICAO Address</th>
-	<th>Flight</th>
-	<th>Altitude</th>
-	<th>Speed</th>
-	<th>Latitude</th>
-	<th>Longitude</th>
-	<th>Track</th>
-	<th>Message Count</th>
-	<th>Last Seen</th>
-</tr>
-</thead>
-<tbody>
-</tbody>
-</table>
 
-<div id="status"></div>
+<div id="map_canvas" style="width:80%; height:100%"></div>
+<div id="info">
+	<div>
+		<h1>ADS-B Monitor</h1>
+
+		<p id="geninfo"></p>
+
+		<p/>
+		<table id="flightlist" class="tablesorter {sortlist: [[0,0]]}">
+			<thead>
+			<tr>
+				<th>ICAO Address</th>
+				<th>Flight</th>
+			</tr>
+			</thead>
+			<tbody>
+			</tbody>
+		</table>
+
+		<p id="selinfo">Click on a plane for info.</p>
+	</div>
+</div>
 
 </body>
 </html>
