Bigtime code organization changes in gmap.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 <body>
 
-<div id="map_canvas" style="width:80%; height:100%"></div>
+<div id="map_canvas"></div>
 <div id="info">
 	<div>
 		<h1>ADS-B Monitor</h1>
@@ -33,7 +33,7 @@
 			</tbody>
 		</table>
 
-		<p id="selinfo">Click on a plane for info.</p>
+		<p id="selinfo">Click on a plane for info</p>
 	</div>
 </div>
 
