Minor bug fixes, tweaked selected flight handling

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <div id="map_canvas"></div>
 <div id="info">
-	<div>
+	<div class="content">
 		<h1>ADS-B Monitor</h1>
 
-		<p id="geninfo"></p>
+		<div id="geninfo"></div>
 
 		<p/>
 		<table id="flightlist" class="tablesorter {sortlist: [[0,0]]}">
@@ -33,7 +33,9 @@
 			</tbody>
 		</table>
 
-		<p id="selinfo">Click on a plane for info</p>
+		<div id="selinfo">Click on a plane for info</div>
+
+		<p/><a href="details.html">View detailed flight list</a>
 	</div>
 </div>
 
